arexx-robot-arm (1.5-27~oneiric) oneiric; urgency=low

  * added a package with the ROS firmware
  * increased the step value for the racsqt sliders

 -- Richard Ulrich <richi@paraeasy.ch>  Wed, 25 Jan 2011 21:30:00 +0100

arexx-robot-arm (1.5-26~oneiric) oneiric; urgency=low

  * added a doc package
  * some correction for installing files

 -- Richard Ulrich <richi@paraeasy.ch>  Thu, 20 Jan 2011 00:10:00 +0100

arexx-robot-arm (1.5-25~maverick) maverick; urgency=low

  * managing arm lib and examples locally
  * compiling examples with cmake
  * changes to the arm lib fo use with c++ for rosserial
  * simplified the folder structure for the temp build directories

 -- Richard Ulrich <richi@paraeasy.ch>  Thu, 19 Jan 2011 21:34:00 +0100

arexx-robot-arm (1.5-24~maverick) maverick; urgency=low

  * dropped gcc-avr dependencies from the robotloader

 -- Richard Ulrich <richi@paraeasy.ch>  Mon, 9 Jan 2011 21:15:00 +0100

arexx-robot-arm (1.5-23~maverick) maverick; urgency=low

  * corrected dependency field

 -- Richard Ulrich <richi@paraeasy.ch>  Mon, 9 Jan 2011 20:15:00 +0100

arexx-robot-arm (1.5-22~maverick) maverick; urgency=low

  * installing the static lib

 -- Richard Ulrich <richi@paraeasy.ch>  Mon, 9 Jan 2011 00:15:00 +0100

arexx-robot-arm (1.5-21~maverick) maverick; urgency=low

  * write last position into a config file using libconfig++

 -- Richard Ulrich <richi@paraeasy.ch>  Sun, 8 Jan 2011 23:37:00 +0100

arexx-robot-arm (1.5-21~maverick) maverick; urgency=low

  * install the cmake files
  * added spin boxes

 -- Richard Ulrich <richi@paraeasy.ch>  Sun, 8 Jan 2011 22:37:00 +0100

arexx-robot-arm (1.5-20~maverick) maverick; urgency=low

  * more restrictive .install files

 -- Richard Ulrich <richi@paraeasy.ch>  Sun, 8 Jan 2011 20:41:00 +0100

arexx-robot-arm (1.5-19~maverick) maverick; urgency=low

  * renamed packages
  * more restrictive .install file

 -- Richard Ulrich <richi@paraeasy.ch>  Sun, 8 Jan 2011 10:58:00 +0100
