@@ -1,0 +1,3 @@
+/usr/share/doc/robotloader/*.pdf
+
+
